--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "drinkrecipesapp",
   "version": "1.0.0",
-  "main": "index.js",
-  "type": "module",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,9 +9,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.7.7",
+    "axios": "^0.21.1",
     "ejs": "^3.1.10",
-    "express": "^4.21.0",
-    "express-session": "^1.18.1"
+    "express": "^4.17.0",
+    "express-session": "^1.17.1"
   }
 }
